電話番号での顧客情報検索処理追加